# silver

./: .gitignore  CMakeLists.txt  README.md
source/: 0x88movegen.c  Makefile  algebraic.c  ilist.c  llist.c  main.c  sq0x88.c  zobkey.c
source/afx/: 0x88movegen.h  algebraic.h  ilist.h  llist.h  sq0x88.h  stdafx.h  stdafx.h.gch  zobkey.h
src/: 0x88movegen.c  algebraic.c  algebraic.h  ilist.c  ilist.h  llist.c  llist.h  main.c  sq0x88.c  sq0x88.h  stdafx.h  zobkey.c
